objects/Test__c.object
<CustomObject   >
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_2__c</fullName>
        <label>Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Temp_Test</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestRequired_Picklist__c</fullName>
        <label>TestRequired Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Credit / Risk / Policy Exceptions</fullName>
                </value>
                <value>
                    <fullName>On Deck Loan (B10)  </fullName>
                </value>
                <value>
                    <fullName>&quot; !&quot;#$%&amp;&apos;()*+,-./:;&lt;=&gt;?@[\]^_`{|}~&quot;</fullName>
                </value>
                <value>
                    <fullName>ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖ×ØÙÚÛÜÝÞ</fullName>
                </value>
                <value>
                    <fullName>ßàáâãäåæçèéêëìíîïðñòóôõö÷øùúûüý</fullName>
                </value>
                <value>
                    <fullName>þÿŒœŠšŸƒˆ˜</fullName>
                </value>
                <value>
                    <fullName>¡¢£¤¥€¦§¨©ª«¬®¯°±²³´µ¶·¸¹º»¼½¾</fullName>
                </value>
                <value>
                    <fullName>¿ΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩαβγδε</fullName>
                </value>
                <value>
                    <fullName>ζηθικλμνξοπρςστυφχψωϑϒϖ†‡•…‰′″</fullName>
                </value>
                <value>
                    <fullName>‾⁄℘ℑℜ™ℵ←↑→↓↔↵⇐⇑⇒⇓⇔∀∂∃∅∇∈∉∋∏∑</fullName>
                </value>
                <value>
                    <fullName>−∗√∝∞∠∧∨∩∪∫∴∼</fullName>
                </value>
                <value>
                    <fullName>⌉⌊⌋⟨⟩◊♠♣♥♦</fullName>
                </value>
                <value>
                    <fullName>�sfsefe</fullName>
                </value>
                <value>
                    <fullName>&apos;â€œ&apos;, &apos;â€™&apos;, &apos;â€¦&apos;, &apos;â€”&apos;, &apos;â€“&apos;, &apos;â€˜&apos;, &apos;Ã©&apos;, &apos;Â&apos;, &apos;â€¢&apos;, &apos;Ëœ&apos;, &apos;â€&apos;</fullName>
                </value>
                <value>
                    <fullName>m�ywe</fullName>
                </value>
                <value>
                    <fullName>Advanced -</fullName>
                </value>
                <value>
                    <fullName>&lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=utf-8&quot; /&gt;</fullName>
                </value>
                <value>
                    <fullName>≅≈≠≡≤≥⊂⊃⊄⊆⊇⊕⊗⊥⋅⌈</fullName>
                </value>
                <value>
                    <fullName>On Deck Loan (B10)Â Â </fullName>
                </value>
                <value>
                    <fullName>&apos;Ã¢â¬Å&apos;, &apos;Ã¢â¬â¢&apos;, &apos;Ã¢â¬Â¦&apos;, &apos;Ã¢â¬â&apos;, &apos;Ã¢â¬â&apos;, &apos;Ã¢â¬Ë&apos;, &apos;ÃÂ©&apos;, &apos;Ã&apos;, &apos;Ã¢â¬Â¢&apos;, &apos;ÃÅ&apos;, &apos;Ã¢â¬&apos;</fullName>
                    <isActive>false</isActive>
                    <label>&apos;Ã¢â¬Å&apos;, &apos;Ã¢â¬â¢&apos;, &apos;Ã¢â¬Â¦&apos;, &apos;Ã¢â¬â&apos;, &apos;Ã¢â¬â&apos;, &apos;Ã¢â¬Ë&apos;, &apos;ÃÂ©&apos;, &apos;Ã&apos;, &apos;Ã¢â¬Â¢&apos;, &apos;ÃÅ&apos;, &apos;Ã¢â¬&apos;</label>
                </value>
                <value>
                    <fullName>On Deck Loan (B10)ÃÂ ÃÂ </fullName>
                    <isActive>false</isActive>
                    <label>On Deck Loan (B10)ÃÂ ÃÂ </label>
                </value>
                <value>
                    <fullName>mï¿½ywe</fullName>
                    <isActive>false</isActive>
                    <label>mï¿½ywe</label>
                </value>
                <value>
                    <fullName>Â¡Â¢Â£Â¤Â¥â¬Â¦Â§Â¨Â©ÂªÂ«Â¬Â®Â¯Â°Â±Â²Â³Â´ÂµÂ¶Â·Â¸Â¹ÂºÂ»Â¼Â½Â¾</fullName>
                    <isActive>false</isActive>
                    <label>Â¡Â¢Â£Â¤Â¥â¬Â¦Â§Â¨Â©ÂªÂ«Â¬Â®Â¯Â°Â±Â²Â³Â´ÂµÂ¶Â·Â¸Â¹ÂºÂ»Â¼Â½Â¾</label>
                </value>
                <value>
                    <fullName>Â¿ÎÎÎÎÎÎÎÎÎÎÎÎÎÎÎÎ Î¡Î£Î¤Î¥Î¦Î§Î¨Î©Î±Î²Î³Î´Îµ</fullName>
                    <isActive>false</isActive>
                    <label>Â¿ÎÎÎÎÎÎÎÎÎÎÎÎÎÎÎÎ Î¡Î£Î¤Î¥Î¦Î§Î¨Î©Î±Î²Î³Î´Îµ</label>
                </value>
                <value>
                    <fullName>ÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃ</fullName>
                    <isActive>false</isActive>
                    <label>ÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃÃ</label>
                </value>
                <value>
                    <fullName>ÃÃ Ã¡Ã¢Ã£Ã¤Ã¥Ã¦Ã§Ã¨Ã©ÃªÃ«Ã¬Ã­Ã®Ã¯Ã°Ã±Ã²Ã³Ã´ÃµÃ¶Ã·Ã¸Ã¹ÃºÃ»Ã¼Ã½</fullName>
                    <isActive>false</isActive>
                    <label>ÃÃ Ã¡Ã¢Ã£Ã¤Ã¥Ã¦Ã§Ã¨Ã©ÃªÃ«Ã¬Ã­Ã®Ã¯Ã°Ã±Ã²Ã³Ã´ÃµÃ¶Ã·Ã¸Ã¹ÃºÃ»Ã¼Ã½</label>
                </value>
                <value>
                    <fullName>Ã¾Ã¿ÅÅÅ Å¡Å¸ÆËË</fullName>
                    <isActive>false</isActive>
                    <label>Ã¾Ã¿ÅÅÅ Å¡Å¸ÆËË</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_One__c</fullName>
        <label>Test One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Three__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Three</label>
        <type>Checkbox</type>
    </fields>
    <label>Test</label>
    <nameField>
        <label>Test Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <recordTypes>
        <fullName>RTOne</fullName>
        <active>true</active>
        <description>RTOne record type</description>
        <label>RTOne</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTThree</fullName>
        <active>true</active>
        <label>RTThree</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTTwo</fullName>
        <active>true</active>
        <label>RTTwo</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>